syntax = "proto3";

package loan;
option go_package = "github.com/pnnguyen58/aspire-code-challenge/proto_generated;protogen";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

import "pkg/proto/repayment.proto";


message Loan {
  uint64 id = 1;
  uint64 customer_id = 2;
  string repayment_type = 3;
  float amount = 4;
  int32 term = 5;
  string state = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  repeated Repayment repayments = 9;
}

message LoanCreateRequest {
  uint64 customer_id = 1;
  float amount = 2;
  int32 term = 3;
}

message LoanCreateResponse {
  Loan data = 1;
  string error = 2;
  int32 code = 3;
}

service LoanService {
  rpc CreateLoan(LoanCreateRequest) returns (LoanCreateResponse) {
    option (google.api.http) = {
      post: "/loans"
      body: "*"
    };
  }
}
